--- a/src/App.css
+++ b/src/App.css
@@ -38,27 +38,29 @@ a:hover {
     border-bottom: 1px #444 solid;
 }
 /* Mobile menu */
-.menu {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-.toggle {
-  order: 1;
-}
-.item.button {
-  order: 2;
-}
-.item {
-  width: 100%;
-  text-align: center;
-  order: 3;
-  display: none;
-}
-.item.active {
-  display: block;
-}
+
+  .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .toggle {
+    order: 1;
+  }
+  .item.button {
+    order: 2;
+  }
+  .item {
+    width: 100%;
+    text-align: center;
+    order: 3;
+    display: none;
+  }
+  .item.active {
+    display: block;
+  }
+
 /* Tablet menu */
 @media all and (min-width: 600px) {
   .menu {
@@ -100,6 +102,10 @@ a:hover {
   .button.secondary a:hover {
       color: #ddd;
   } 
+  .sectionContainer {
+    /* flex-direction: column; */
+  }
+
 }
 /* Desktop menu */
 @media all and (min-width: 900px) {
@@ -138,8 +144,40 @@ a:hover {
   width: 100%;
   position: relative;
   overflow: hidden;
+  /* justify-content: center; */
+  /* align-items: center; */
 } 
+.card-container {
+  width: 300px;
+  height: 300px;
 
+}
+.card {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+  transform-style: preserve-3d ;
+}
+.card-container:hover .card {
+  transform: rotateX(180deg);
+}
+.card figure {
+  text-align: center;
+  padding: 5px;
+  width:100%;
+  height: 100%;
+  position: absolute;
+}
+
+.card .front {
+  background: #2bcbba;
+  color: #fff;
+}
+.card .back {
+  background: #26de81;
+  color: #fff;
+  transform: rotateX(180deg);
+}
 img {
   width: 100%;
   /* height: 100%; */
@@ -163,11 +201,16 @@ footer {
   text-align: center;
 }
 
-
 .sectionItem:hover .overlay {
   display: block;
   bottom: 150px;
   font-size: 28px;
   font-weight: bold;
   /* color: black; */
+}
+
+@media mobile and (max-width: 599px) {
+.sectionContainer {
+  flex-direction: column;
+}
 }
