--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,10 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-body {
     font-family: sans-serif;
 }
+
 nav {
-    /* background: #222; */
     padding: 5px 20px;
 }
 ul {
@@ -25,113 +23,29 @@ a:hover {
 .logo a:hover {
     text-decoration: none;
 }
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
 .menu li {
     font-size: 16px;
     padding: 15px 5px;
     white-space: nowrap;
 }
-.logo a,
-.toggle a {
-    font-size: 20px;
-}
-.button.secondary {
-    border-bottom: 1px #444 solid;
-}
-/* Mobile menu */
 
-  .menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .toggle {
-    order: 1;
-  }
-  .item.button {
-    order: 2;
-  }
-  .item {
-    width: 100%;
-    text-align: center;
-    order: 3;
-    display: none;
-  }
-  .item.active {
-    display: block;
-  }
 
-/* Tablet menu */
-@media all and (min-width: 600px) {
-  .menu {
-      justify-content: center;
-  }
-  .logo {
-      flex: 1;
-  }
-  .toggle {
-      flex: 1;
-      text-align: right;
-  }
-  .item.button {
-      width: auto;
-      order: 1;
-      display: block;
-  }
-  .toggle {
-      order: 2;
-  }
-  .button.secondary {
-      border: 0;
-  }
-  .button a {
-      padding: 7.5px 15px;
-      background: teal;
-      border: 1px #006d6d solid;
-  }
-  .button.secondary a {
-      background: transparent;    
-  }
-  .button a:hover {
-      text-decoration: none;
-  }
-  .button:not(.secondary) a:hover {
-      background: #006d6d;
-      border-color: #005959;
-  }
-  .button.secondary a:hover {
-      color: #ddd;
-  } 
-  .sectionContainer {
-    /* flex-direction: column; */
-  }
-
-}
 /* Desktop menu */
-@media all and (min-width: 900px) {
+ @media all and (min-width: 900px) {
   .item {
       display: block;
       width: auto;
   }
-  .toggle {
-      display: none;
-  }
-  .logo {
-      order: 0;
-  }
   .item {
       order: 1;
   }
-  .button {
-      order: 2;
-  }
-  .menu li {
-      padding: 15px 10px;
-  }
-  .menu li.button {
-      padding-right: 0;
-  }
-}
+} 
 
 .sectionContainer {
   display: flex;
@@ -148,8 +62,8 @@ a:hover {
   /* align-items: center; */
 } 
 .card-container {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
 
 }
 .card {
@@ -159,7 +73,7 @@ a:hover {
   transform-style: preserve-3d ;
 }
 .card-container:hover .card {
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 .card figure {
   text-align: center;
@@ -176,18 +90,14 @@ a:hover {
 .card .back {
   background: #26de81;
   color: #fff;
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 img {
   width: 100%;
   /* height: 100%; */
   display: block;
 } 
-footer {
-  padding: 10px 0px;
-  text-align: center;
-  /* background: black; */
-}
+
 .overlay {
   /* display: none; */
   transition: bottom ease-in 0.3s;
@@ -208,9 +118,29 @@ footer {
   font-weight: bold;
   /* color: black; */
 }
-
-@media mobile and (max-width: 599px) {
-.sectionContainer {
-  flex-direction: column;
+footer {
+  padding: 10px 0px;
+  text-align: center;
+  /* background: black; */
 }
+.footerContainer {
+  display: flex;
+}
+.footer-item {
+  flex: 1;
+}
+.fontAwesome {
+  margin: 0 8px;
+}
+.footerContainer P {
+  color: #aaa;
+  font-weight: 600;
+}
+.skillsetContainer {
+  height: 100px;
+  padding-top: 20px;
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(4, 1fr);
+  margin: 10px 30px;
 }
