--- a/src/App.css
+++ b/src/App.css
@@ -152,14 +152,18 @@ footer {
   font-weight: 600;
 }
 .skillsetContainer {
-  height: 100px;
-  padding-top: 20px;
+  height: 200px;
+  padding: 30px;
   display: grid;
   /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   margin: 10px 30px;
 }
 
+.skillsetContainer {
+  color: #aaa;
+  font-weight: 800;
+}
 blockquote {
   display: block;
   font-size: 2em;
@@ -206,4 +210,22 @@ blockquote img {
     -ms-transform: scale(0.9);
     transform: scale(0.8);
   }
+}
+
+.header {
+  width: 100%;
+  height: 600px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 2.5rem;
+  background: url(./images/blackmanwithlaptop.jpg);
+  background-size: cover;
+  text-align: center;
+}
+.headerText {
+  color: black;
+  padding-top: 15%;
+  
 }
