Added stroke to header text and removed sections in maincontent.js

--- a/src/App.css
+++ b/src/App.css
@@ -48,26 +48,32 @@ a:hover {
 } 
 
 .sectionContainer {
-  display: flex;
+  /* display: flex; */
   /* width: 100%; */
   /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));  */
    /* grid-template-rows: auto auto auto; */
 }
 .sectionItem {
-  flex: 1;
+  /* flex: 1;
   width: 100%;
   position: relative;
-  overflow: hidden;
+  overflow: hidden; */
   /* justify-content: center; */
   /* align-items: center; */
 } 
+.mainContainer {
+  /* padding: 30px; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+}
 .card-container {
-  width: 400px;
-  height: 300px; 
+  width: 100%;
+  height: 45vh;
 
 }
 .card {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   transition: transform 0.5s ease-in-out;
   transform-style: preserve-3d ;
@@ -236,19 +242,24 @@ blockquote img {
 }
 .headerText {
   color: black;
-  padding-top: 15%;
+  padding-top: 10%;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
   
 }
 .headerText span {
   color: #3bd6c6;
   font-size: 6.5rem;
 }
-.headerText span {
+.title {
+  /* -webkit-text-fill-color: white; Will override color (regardless of order) */
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: #fff;
+}
+/* .headerText span {
   animation: shadow-pulse 2s ease-in-out 10;
   border-radius: 5%;
 }
-
-
 @keyframes shadow-pulse
 {
      0% {
@@ -257,4 +268,7 @@ blockquote img {
      100% {
           box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
      }
+} */
+.maincontent {
+  width: 100%;
 }
