--- a/src/App.css
+++ b/src/App.css
@@ -57,22 +57,7 @@ a:hover {
   }
 } 
 
-.sectionContainer {
-  /* display: flex; */
-  /* width: 100%; */
-  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));  */
-   /* grid-template-rows: auto auto auto; */
-}
-.sectionItem {
-  /* flex: 1;
-  width: 100%;
-  position: relative;
-  overflow: hidden; */
-  /* justify-content: center; */
-  /* align-items: center; */
-} 
 .mainContainer {
-  /* padding: 30px; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
@@ -177,7 +162,7 @@ footer {
 }
 
 .skillsetContainer {
-  color: #696969g;
+  color: #696969;
   font-weight: 800;
 }
 blockquote {
@@ -290,8 +275,17 @@ blockquote img {
     /* background: url('./images/blackblueswirl.jpg') no-repeat fixed; */
     background-position: center;
     text-align: center;
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;   
     font: 800 2em  'Tomorrow', sans-serif;
 }
 /* CSS for SectionHeader Component  */
+.contact {
+  width: 40%;
+  margin: 10px auto;
+}
+.contact form {
+  background: #aaa;
+
+}
