--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,17 @@ nav {
 }
 .logo {
   flex: 2;
+  padding-left: 2%;
 }
 .navcenter {
   flex: 4;
 }
-.navblock {
+/* .navblock {
   flex: 6;
+} */
+.menublock {
+  flex: 6;
+  padding-right: 2%;
 }
 ul {
     list-style-type: none;
@@ -59,12 +64,12 @@ a:hover {
 
 .mainContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  /* grid-template-rows: repeat(300px, 3); */
 }
 .card-container {
   width: 100%;
-  height: 45vh;
+  height: 300px;
 
 }
 .card {
@@ -85,14 +90,15 @@ a:hover {
 }
 
 .card .front {
-  /* background: #89ecda; */
   color: #fff;
-  /* border: solid 1px #89ecda; */
+  height: 100%;
+  /* border: solid 1px #aaa; */
 }
 .card .back {
   padding-top: 40px;
   background: white;
   color: #aaa;
+  /* border: solid 1px #aaa; */
   /* border: solid 4px #89ecda; */
   transform: rotateY(180deg);
 }
@@ -101,10 +107,12 @@ img {
   /* height: 100%; */
   display: block;
 } 
-
+figure img {
+  height: 100%;
+}
 .overlay {
   position: absolute;
-  bottom: 0px;
+  bottom: 1px;
   font-size: 18px;
   padding: 10px 5px;
   font-weight: bold;
@@ -123,7 +131,7 @@ img {
 .light {
   color: white;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.75;
 }
 
 /* .sectionItem:hover .overlay {
@@ -153,11 +161,9 @@ footer {
   font-weight: 600;
 }
 .skillsetContainer {
-  height: 200px;
   padding: 30px;
   display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   margin: 10px 30px;
 }
 
@@ -289,3 +295,32 @@ blockquote img {
   background: #aaa;
 
 }
+.about {
+  width: 80%;
+  margin: 20px auto;
+}
+.about span {
+  font-size: 20px;
+  margin-left: 70px;
+}
+.bookquote {
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    /* background-color: lightblue; */
+  }
+  .logo {
+    flex: 2;
+    padding-left: 2%;
+  }
+  .navcenter {
+    flex: 0;
+  }
+  .menublock {
+    flex: 8;
+    padding-right: 2%;
+  }
+}
+
