--- a/src/App.css
+++ b/src/App.css
@@ -335,6 +335,10 @@ blockquote img {
   font-size: 20px;
   margin-left: 70px;
 }
+.about img {
+  width: 10%;
+  border-radius: 50%;
+}
 .bookquote {
   font-weight: 500;
 }
