--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ nav {
     display: flex;
 }
 .logo {
-  flex: 2;
+  /* flex: 2; */
   padding-left: 2%;
 }
 .logo a {
@@ -53,13 +53,13 @@ Tints of #0281b2
 
 */
 .navcenter {
-  flex: 4;
+  flex: 1 ;
 }
 /* .navblock {
   flex: 6;
 } */
 .menublock {
-  flex: 6;
+  /* flex: 6; */
   padding-right: 2%;
 }
 ul {
@@ -84,7 +84,7 @@ a:hover {
 }
 .menu li {
     font-size: 16px;
-    padding: 15px 5px;
+    padding: 15px 15px;
     white-space: nowrap;
 }
 
@@ -99,6 +99,29 @@ a:hover {
       order: 1;
   }
 } 
+
+/* Mobile menu */
+@media all and (max-width: 600px) {
+  nav {
+    flex-direction: column;
+  }
+  .menu li {
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid #aaa;
+  }
+  .header {
+    height: 300px;
+    font-size: 1.5rem;
+  }
+  blockquote {
+    font-size: 1em;
+    margin-top: 0.5em;
+    margin-bottom: 0.25em;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
 
 .mainContainer {
   display: grid;
@@ -352,7 +375,7 @@ blockquote img {
   margin-left: 70px;
 }
 .about img {
-  width: 10%;
+  width: 10vw;
   height: 130px;
   border-radius: 50%;
   margin: 0 auto;
@@ -360,10 +383,10 @@ blockquote img {
 .bookquote {
   font-weight: 500;
 }
-
+/* 
 @media only screen and (max-width: 768px) {
   body {
-    /* background-color: lightblue; */
+    
   }
   .logo {
     flex: 2;
@@ -376,5 +399,5 @@ blockquote img {
     flex: 8;
     padding-right: 2%;
   }
-}
+} */
 
